--- a/source/spydersoft.Identity/Views/Home/Contact.cshtml
+++ b/source/spydersoft.Identity/Views/Home/Contact.cshtml
@@ -1,20 +1,36 @@
 ﻿
-
-<div class="row">
-    <div class="col-sm-6">
-        <div class="card card-accent-info">
-            <div class="card-header">
-                <strong>
-                    <i class="icon-envelope"></i> Contact
-                </strong>
+<section>
+    <div class="container-fluid">
+        <div class="title-wrapper pt-30">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <div class="title mb-30">
+                        <h2>Contact</h2>
+                    </div>
+                </div>
+                <!-- end col -->
             </div>
-            <div class="card-body">
-                <h3>Spydersoft</h3>
-                <address>
-                    <strong>General</strong>: <a href="mailto:geregam@gmail.com">geregam@gmail.com</a>
-                </address>
+            <!-- end row -->
+        </div>
+        <div class="row">
+            <div class="row my-2">
+                <div class="col-sm-6">
+                    <div class="card-style">
+                        <div class="card-meta">
+                            <strong>
+                                <i class="icon-envelope"></i> Spydersoft
+                            </strong>
+                        </div>
+                        <div class="card-content">
+                            <h3>Matt Gerega</h3>
+                            <address>
+                                <strong>General</strong>: <a href="mailto:geregam@gmail.com">geregam@gmail.com</a>
+                            </address>
+                            <a href="https://www.mattgerega.com">mattgerega.com</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
-
+</section>
