--- a/source/spydersoft.Identity/Views/ApiResources/Edit.cshtml
+++ b/source/spydersoft.Identity/Views/ApiResources/Edit.cshtml
@@ -1,49 +1,59 @@
 ﻿@using spydersoft.Identity.Models.Admin.ApiResourceViewModels
 @model ApiResourceViewModel
-
-<form asp-action="Edit">
-    <div class="card">
-        <div class="card-header">
-            <h3>@ViewData["Title"]</h3>
+<section>
+    <div class="container-fluid">
+        <div class="title-wrapper pt-30">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <div class="title mb-30">
+                        <h2>@ViewData["Title"]</h2>
+                    </div>
+                </div>
+                <!-- end col -->
+            </div>
+            <!-- end row -->
         </div>
-        <div class="card-body">
-            @await Html.PartialAsync("_apiNavBar", Model.NavBar)
-            <div class="border border-top-0 px-2 py-1">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="row">
+            <div class="card-style mb-30">
+                <form asp-action="Edit">
+                    @await Html.PartialAsync("_apiNavBar", Model.NavBar)
+                    <div class="border border-top-0 px-2 py-1">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Name)
-                    <input type="text" class="form-control" id="txtName" asp-for="Name" pf-validation-for="Name" pf-validationerror-class="is-invalid" />
-                    <span asp-validation-for="Name" class="invalid-feedback"></span>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.DisplayName)
-                    <input type="text" class="form-control" id="txtDisplayName" asp-for="DisplayName" pf-validation-for="DisplayName" pf-validationerror-class="is-invalid" />
-                    <span asp-validation-for="DisplayName" class="invalid-feedback"></span>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Description)
-                    <input type="text" class="form-control" id="txtDescription" asp-for="Description" pf-validation-for="Description" pf-validationerror-class="is-invalid" />
-                    <span asp-validation-for="Description" class="invalid-feedback"></span>
-                </div>
-                <div class="form-group">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" asp-for="Enabled" id="chkEnabled" />
-                        <label class="form-check-label" asp-for="Enabled"></label>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Name)
+                            <input type="text" class="form-control" id="txtName" asp-for="Name" pf-validation-for="Name" pf-validationerror-class="is-invalid" />
+                            <span asp-validation-for="Name" class="invalid-feedback"></span>
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.DisplayName)
+                            <input type="text" class="form-control" id="txtDisplayName" asp-for="DisplayName" pf-validation-for="DisplayName" pf-validationerror-class="is-invalid" />
+                            <span asp-validation-for="DisplayName" class="invalid-feedback"></span>
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Description)
+                            <input type="text" class="form-control" id="txtDescription" asp-for="Description" pf-validation-for="Description" pf-validationerror-class="is-invalid" />
+                            <span asp-validation-for="Description" class="invalid-feedback"></span>
+                        </div>
+                        <div class="form-group">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" asp-for="Enabled" id="chkEnabled" />
+                                <label class="form-check-label" asp-for="Enabled"></label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" asp-for="NonEditable" id="chkNonEditable" />
+                                <label class="form-check-label" asp-for="NonEditable"></label>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" asp-for="NonEditable" id="chkNonEditable" />
-                        <label class="form-check-label" asp-for="NonEditable"></label>
+
+                    <div>
+                        <input type="submit" value="Save" class="btn btn-sm btn-primary" />
                     </div>
-                </div>
+                </form>
             </div>
         </div>
-
-        <div class="card-footer">
-            <input type="submit" value="Save" class="btn btn-sm btn-primary" />
-        </div>
     </div>
-</form>
-
+</section>
