--- a/source/spydersoft.Identity/Views/Home/Index.cshtml
+++ b/source/spydersoft.Identity/Views/Home/Index.cshtml
@@ -2,11 +2,28 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="jumbotron">
-    <div class="container">
-        <h1>Welcome to Spydersoft's Identity Server!</h1>
-        <p>This site provides authentication services for Spydersoft applications.</p>
+<section class="section">
+    <div class="container-fluid">
+        <!-- ========== title-wrapper start ========== -->
+        <div class="title-wrapper pt-30">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <div class="titlemb-30">
+                        <h2>Spydersoft Authentication</h2>
+                    </div>
+                </div>
+              
+                <!-- end col -->
+            </div>
+            <!-- end row -->
+        </div>
+        <!-- ========== title-wrapper end ========== -->
+        <div class="card-style">
+            <div class="card-content">
+                <p>This site provides authentication services for Spydersoft applications.</p>
+            </div>
+        </div>
     </div>
-    
+    <!-- end container -->
+</section>
 
-</div>
