--- a/source/spydersoft.Identity/Views/IdentityResources/Index.cshtml
+++ b/source/spydersoft.Identity/Views/IdentityResources/Index.cshtml
@@ -1,51 +1,65 @@
 ﻿@using spydersoft.Identity.Models.Admin.IdentityResourceViewModels
 @model IdentityResourcesViewModel
 
-<div class="card">
-    <div class="card-header">
-        <h3>@ViewData["Title"]</h3>
-    </div>
-    <div class="card-body">
-        <table class="table table-bordered table-striped">
-            <thead class="thead-dark">
-                <tr>
-                    <th>Name</th>
-                    <th>Display Name</th>
-                    <th>Description</th>
-                    <th>Actions&nbsp;<a asp-action="Edit"><span class="fa fa-plus"></span></a></th>
-                </tr>
-            </thead>
+<section>
+    <div class="container-fluid">
+        <div class="title-wrapper pt-30">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <div class="title mb-30">
+                        <h2>@ViewData["Title"]</h2>
+                    </div>
+                </div>
+                <!-- end col -->
+            </div>
+            <!-- end row -->
+        </div>
+        <div class="row">
+            <div class="card-style mb-30">
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead class="thead-dark">
+                        <tr>
+                            <th>Name</th>
+                            <th>Display Name</th>
+                            <th>Description</th>
+                            <th>Actions&nbsp;<a asp-action="Edit"><span class="fa fa-plus"></span></a></th>
+                        </tr>
+                        </thead>
 
-            @foreach (var identityResource in Model.IdentityResources)
-            {
-                <tr>
-                    <td>@identityResource.DisplayName</td>
-                    <td>@identityResource.DisplayName</td>
-                    <td>@identityResource.Description</td>
-                    <td>
-                        <a asp-action="Edit" asp-route-id="@identityResource.Id"><span class="fa fa-edit"></span></a>
-                        <a asp-action="Delete" asp-route-id="@identityResource.Id" title="Delete"><span class="fa fa-trash"></span></a>
-                    </td>
-                </tr>
-            }
-        </table>
-        <form asp-action="AddStandard">
-            <div class="form-group row">
-                <label asp-for="SelectedAvailableResource" class="col-sm-4 col-form-label"></label>
-                <div class="col-sm-6">
-                    <select asp-for="SelectedAvailableResource" class="form-control">
-                        @foreach (var standardResource in Model.AvailableStandardResources)
+                        @foreach (var identityResource in Model.IdentityResources)
                         {
-                            <option value="@standardResource.Name">@standardResource.DisplayName</option>
+                            <tr>
+                                <td>@identityResource.DisplayName</td>
+                                <td>@identityResource.DisplayName</td>
+                                <td>@identityResource.Description</td>
+                                <td>
+                                    <a asp-action="Edit" asp-route-id="@identityResource.Id"><span class="fa fa-edit"></span></a>
+                                    <a asp-action="Delete" asp-route-id="@identityResource.Id" title="Delete"><span class="fa fa-trash"></span></a>
+                                </td>
+                            </tr>
                         }
-                    </select>
+                    </table>
                 </div>
+                <form asp-action="AddStandard">
+                    <div class="form-group row">
+                        <label asp-for="SelectedAvailableResource" class="col-sm-4 col-form-label"></label>
+                        <div class="col-sm-6">
+                            <select asp-for="SelectedAvailableResource" class="form-control">
+                                @foreach (var standardResource in Model.AvailableStandardResources)
+                                {
+                                    <option value="@standardResource.Name">@standardResource.DisplayName</option>
+                                }
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-sm-10">
+                            <input type="submit" value="Add Standard" class="btn btn-sm btn-primary"/>
+                        </div>
+                    </div>
+                </form>
             </div>
-            <div class="form-group row">
-                <div class="col-sm-10">
-                    <input type="submit" value="Add Standard" class="btn btn-sm btn-primary" />
-                </div>
-            </div>
-        </form>
+        </div>
     </div>
-</div>
+</section>
