--- a/source/spydersoft.Identity/Views/Shared/_Layout.cshtml
+++ b/source/spydersoft.Identity/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
     <aside class="sidebar-nav-wrapper">
         <div class="navbar-logo">
             <a href="/">
-                <img src="images/logo/logo.svg" alt="logo" />
+                <img src="~/images/logo/logo.svg" alt="logo" />
             </a>
         </div>
         @await Html.PartialAsync("_SidebarNav")
