--- a/source/spydersoft.Identity/Views/UserRoles/Edit.cshtml
+++ b/source/spydersoft.Identity/Views/UserRoles/Edit.cshtml
@@ -1,78 +1,95 @@
 ﻿@using spydersoft.Identity.Models.Identity
 @model ApplicationRoleViewModel
-
-<form asp-action="Edit">
-    <div class="card">
-        <div class="card-header">
-            <h3>@ViewData["Title"]</h3>
-        </div>
-        <div class="card-body">
-            <div class="border px-2 py-1">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                @Html.HiddenFor(model => model.Role.Id)
-                @Html.HiddenFor(model => model.Role.ConcurrencyStamp)
-                @Html.HiddenFor(model => model.Role.NormalizedName)
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Role.Name)
-                    <input type="text" class="form-control" id="txtName" asp-for="Role.Name" pf-validation-for="Role.Name" pf-validationerror-class="is-invalid" />
-                    <span asp-validation-for="Role.Name" class="invalid-feedback"></span>
+<section>
+    <div class="container-fluid">
+        <div class="title-wrapper pt-30">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <div class="title mb-30">
+                        <h2>@ViewData["Title"]</h2>
+                    </div>
                 </div>
+                <!-- end col -->
+            </div>
+            <!-- end row -->
+        </div>
+        <div class="row">
+            <div class="card-style mb-30">
+                <form asp-action="Edit">
+                    <div class="card-meta">
+                        <h3>Role Details</h3>
+                    </div>
+                    <div class="card-content">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        @Html.HiddenFor(model => model.Role.Id)
+                        @Html.HiddenFor(model => model.Role.ConcurrencyStamp)
+                        @Html.HiddenFor(model => model.Role.NormalizedName)
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Role.Name)
+                            <input type="text" class="form-control" id="txtName" asp-for="Role.Name" pf-validation-for="Role.Name" pf-validationerror-class="is-invalid" />
+                            <span asp-validation-for="Role.Name" class="invalid-feedback"></span>
+                        </div>
+                    </div>
+
+                    <div>
+                        <input type="submit" value="Save" class="btn btn-sm btn-primary" />
+                    </div>
+                </form>
             </div>
         </div>
+        <div class="row">
+            @if (Model.Claims != null)
+            {<div class="card-style">
+                    <form asp-action="AddClaim" asp-route-roleid="@Model.Role.Id">
 
-        <div class="card-footer">
-            <input type="submit" value="Save" class="btn btn-sm btn-primary" />
+                        <div class="card-meta">
+                            <h3>Role Claims</h3>
+                        </div>
+                        <div class="card-content">
+                            <table class="table">
+                                <thead class="thead-dark">
+                                    <tr>
+                                        <th>@Html.LabelFor(model => model.NewClaim.Type)</th>
+                                        <th>@Html.LabelFor(model => model.NewClaim.Value)</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                </thead>
+
+                                @foreach (var apiClaim in Model.Claims)
+                                {
+                                    <tr>
+                                        <td>@apiClaim.Type</td>
+                                        <td>@apiClaim.Value</td>
+                                        <td><a asp-action="DeleteClaim" asp-route-claimtype="@apiClaim.Type" asp-route-roleid="@Model.Role.Id" title="Delete"><span class="fa fa-trash"></span></a></td>
+                                    </tr>
+                                }
+                                <tr>
+                                    <td>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" id="txtClientId" asp-for="NewClaim.Type" pf-validation-for="NewClaim.Type" pf-validationerror-class="is-invalid" />
+                                            <span asp-validation-for="NewClaim.Type" class="invalid-feedback"></span>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" id="txtNewClaim.Value" asp-for="NewClaim.Value" pf-validation-for="NewClaim.Value" pf-validationerror-class="is-invalid" />
+                                            <span asp-validation-for="NewClaim.Value" class="invalid-feedback"></span>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="form-group">
+                                            <input type="submit" value="Add" class="btn btn-sm btn-primary" />
+                                        </div>
+                                    </td>
+
+                                </tr>
+                            </table>
+                        </div>
+                    </form>
+                </div>
+
+            }
         </div>
     </div>
-</form>
-@if (Model.Claims != null)
-{
-    <form asp-action="AddClaim" asp-route-roleid="@Model.Role.Id">
-        <div class="card">
-            <div class="card-header">
-                <h3>Role Claims</h3>
-            </div>
-            <div class="card-body">
-                <table class="table table-striped">
-                    <thead class="thead-dark">
-                    <tr>
-                        <th>@Html.LabelFor(model => model.NewClaim.Type)</th>
-                        <th>@Html.LabelFor(model => model.NewClaim.Value)</th>
-                        <th>Actions</th>
-                    </tr>
-                    </thead>
-
-                    @foreach (var apiClaim in Model.Claims)
-                    {
-                        <tr>
-                            <td>@apiClaim.Type</td>
-                            <td>@apiClaim.Value</td>
-                            <td><a asp-action="DeleteClaim" asp-route-claimtype="@apiClaim.Type" asp-route-roleid="@Model.Role.Id" title="Delete"><span class="fa fa-trash"></span></a></td>
-                        </tr>
-                    }
-                    <tr>
-                        <td>
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="txtClientId" asp-for="NewClaim.Type" pf-validation-for="NewClaim.Type" pf-validationerror-class="is-invalid"/>
-                                <span asp-validation-for="NewClaim.Type" class="invalid-feedback"></span>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="form-group">
-                                <input type="text" class="form-control" id="txtNewClaim.Value" asp-for="NewClaim.Value" pf-validation-for="NewClaim.Value" pf-validationerror-class="is-invalid"/>
-                                <span asp-validation-for="NewClaim.Value" class="invalid-feedback"></span>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="form-group">
-                                <input type="submit" value="Add" class="btn btn-sm btn-primary"/>
-                            </div>
-                        </td>
-
-                    </tr>
-                </table>
-            </div>
-        </div>
-    </form>
-}
+</section>
 
