Fixed nav bar collapse/expand

--- a/source/spydersoft.Identity/Views/Shared/_Footer.cshtml
+++ b/source/spydersoft.Identity/Views/Shared/_Footer.cshtml
@@ -8,8 +8,7 @@
                         <a
                             href="http://www.mattgerega.com"
                             rel="nofollow"
-                            target="_blank"
-                        >
+                            target="_blank">
                             Spydersoft
                         </a>
                     </p>
