--- a/source/spydersoft.Identity/Views/Shared/_SidebarNav.cshtml
+++ b/source/spydersoft.Identity/Views/Shared/_SidebarNav.cshtml
@@ -1,11 +1,13 @@
-﻿<nav class="sidebar-nav">
+﻿@using Microsoft.AspNetCore.Http
+@using spydersoft.Identity.Extensions
+<nav class="sidebar-nav">
     <ul>
         <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"><i class="fa fa-home"></i> Home</a></li>
         @if (User.IsInRole("admin"))
         {
-            <li class="nav-item nav-item-has-children">
-                <a href="#0"
-                   data-bs-toggle="collapsed"
+            <li class="nav-item nav-item-has-children @(Context.IsISAdminRoute() ? "active" : string.Empty)">
+                <a class="collapsed"
+                   data-bs-toggle="collapse"
                    data-bs-target="#dd_clients"
                    aria-controls="dd_clients"
                    aria-expanded="false"
@@ -18,58 +20,40 @@
                     <span class="text">IS Admin</span>
                 </a>
 
-                <ul id="dd_clients" class="collapse show dropdown-nav">
+                <ul id="dd_clients" class="collapse @(Context.IsISAdminRoute() ? "show" : string.Empty)">
                     <li><a asp-area="" asp-controller="Clients" asp-action="Index"><i class="fa fa-mobile"></i> Clients</a></li>
                     <li><a asp-area="" asp-controller="IdentityResources" asp-action="Index"><i class="fa fa-stream"></i> Resources</a></li>
                     <li><a asp-area="" asp-controller="ApiResources" asp-action="Index"><i class="fa fa-server"></i> APIs</a></li>
                     <li><a asp-area="" asp-controller="Scopes" asp-action="Index"><i class="fa fa-server"></i> Scopes</a></li>
                 </ul>
             </li>
-            <li class="nav-item nav-item-has-children">
-                <a href="#0"
-                   class="collapsed"
+            <li class="nav-item nav-item-has-children @(Context.IsUserAdminRoute() ? "active" : string.Empty)">
+                <a class="collapsed"
                    data-bs-toggle="collapse"
                    data-bs-target="#ddmenu_2"
                    aria-controls="ddmenu_2"
                    aria-expanded="false"
                    aria-label="Toggle navigation">
-                    <span class="icon">
-                        <svg width="22"
-                             height="22"
-                             viewBox="0 0 22 22"
-                             fill="none"
-                             xmlns="http://www.w3.org/2000/svg">
-                            <path d="M12.8334 1.83325H5.50008C5.01385 1.83325 4.54754 2.02641 4.20372 2.37022C3.8599 2.71404 3.66675 3.18036 3.66675 3.66659V18.3333C3.66675 18.8195 3.8599 19.2858 4.20372 19.6296C4.54754 19.9734 5.01385 20.1666 5.50008 20.1666H16.5001C16.9863 20.1666 17.4526 19.9734 17.7964 19.6296C18.1403 19.2858 18.3334 18.8195 18.3334 18.3333V7.33325L12.8334 1.83325ZM16.5001 18.3333H5.50008V3.66659H11.9167V8.24992H16.5001V18.3333Z" />
-                        </svg>
-                    </span>
+                    <i class="fa fa-users icon"></i>
                     <span class="text">User Admin</span>
                 </a>
-                <ul id="ddmenu_2" class="collapse dropdown-nav">
+                <ul id="ddmenu_2" class="collapse @(Context.IsUserAdminRoute() ? "show" : string.Empty)">
                     <li><a asp-area="" asp-controller="Users" asp-action="Index"><i class="fa fa-users"></i> Users</a></li>
                     <li><a asp-area="" asp-controller="UserRoles" asp-action="Index"><i class="fa fa-user-tag"></i> Roles</a></li>
                 </ul>
             </li>
         }
-        <li class="nav-item nav-item-has-children">
-            <a href="#0"
-               class="collapsed"
+        <li class="nav-item nav-item-has-children @(Context.IsSpydersoftRoute() ? "active" : string.Empty)">
+            <a class="collapsed"
                data-bs-toggle="collapse"
                data-bs-target="#ddmenu_3"
                aria-controls="ddmenu_3"
                aria-expanded="false"
                aria-label="Toggle navigation">
-                <span class="icon">
-                    <svg width="22"
-                         height="22"
-                         viewBox="0 0 22 22"
-                         fill="none"
-                         xmlns="http://www.w3.org/2000/svg">
-                        <path d="M12.9067 14.2908L15.2808 11.9167H6.41667V10.0833H15.2808L12.9067 7.70917L14.2083 6.41667L18.7917 11L14.2083 15.5833L12.9067 14.2908ZM17.4167 2.75C17.9029 2.75 18.3692 2.94315 18.713 3.28697C19.0568 3.63079 19.25 4.0971 19.25 4.58333V8.86417L17.4167 7.03083V4.58333H4.58333V17.4167H17.4167V14.9692L19.25 13.1358V17.4167C19.25 17.9029 19.0568 18.3692 18.713 18.713C18.3692 19.0568 17.9029 19.25 17.4167 19.25H4.58333C3.56583 19.25 2.75 18.425 2.75 17.4167V4.58333C2.75 3.56583 3.56583 2.75 4.58333 2.75H17.4167Z" />
-                    </svg>
-                </span>
+                <img src="~/images/favicon.svg" alt="Spydersoft Icon" class="icon" width="25" height="25" />
                 <span class="text">Spydersoft</span>
             </a>
-            <ul id="ddmenu_3" class="collapse dropdown-nav">
+            <ul id="ddmenu_3" class="collapse @(Context.IsSpydersoftRoute() ? "show" : string.Empty)">
                 <li><a asp-area="" asp-controller="Home" asp-action="Contact"><i class="fa fa-address-card"></i> Contact</a></li>
                 <li><a asp-area="" asp-controller="Home" asp-action="About"><i class="fa fa-info-circle"></i> About</a></li>
             </ul>
