--- a/source/spydersoft.Identity/Assets/scss/_common.scss
+++ b/source/spydersoft.Identity/Assets/scss/_common.scss
@@ -2,7 +2,7 @@
 		COMMON css
 ===========================*/
 
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap");
+/*@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap");*/
 
 html {
   scroll-behavior: smooth;
