--- a/source/spydersoft.Identity/Views/Consent/_ScopeListItem.cshtml
+++ b/source/spydersoft.Identity/Views/Consent/_ScopeListItem.cshtml
@@ -26,7 +26,7 @@
     @if (Model.Description != null)
     {
         <p class="mb-1">
-            <label for="scopes_@Model.Name">@Model.Description</label>
+            <label for="scopes_@Model.DisplayName">@Model.Description</label>
         </p>
     }
     @if (Model.Required)
