--- a/source/spydersoft.Identity/Views/Shared/_LoginPartial.cshtml
+++ b/source/spydersoft.Identity/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
 ﻿@using spydersoft.Identity.Models.Identity
+@using IdentityModel
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
@@ -19,9 +20,9 @@
             >
                 <div class="profile-info">
                     <div class="info">
-                        <h6>@UserManager.GetUserName(User)</h6>
+                        <h6>@UserManager.GetUserAsync(User).Result.Name</h6>
                         <div class="image">
-                            <img gravatar-email="@UserManager.GetEmailAsync(UserManager.GetUserAsync(User).Result).Result" gravatar-size="80" alt="My Gravatar" class="img-avatar" />
+                            <img gravatar-email="@UserManager.GetUserAsync(User).Result.Email" gravatar-size="80" alt="My Gravatar" class="img-avatar" />
                             <span class="status"></span>
                         </div>
                     </div>
@@ -60,7 +61,7 @@ else
             <div class="profile-info">
                 <div class="info">
                     <div class="image">
-                        <img gravatar-email="@UserManager.GetUserName(User)" gravatar-size="50" alt="My Gravatar" class="img-avatar" />
+                        <img gravatar-email="" gravatar-size="80" alt="My Gravatar" class="img-avatar" />
                         <span class="status"></span>
                     </div>
                 </div>
@@ -72,7 +73,7 @@ else
             aria-labelledby="profile"
         >
             <li>
-                <a asp-area="" asp-controller="Account" asp-action="Register">
+                <a asp-area="" asp-controller="Register">
                     <i class="lni lni-user"></i> Register
                 </a>
             </li>
