--- a/source/spydersoft.Identity/Views/Consent/Index.cshtml
+++ b/source/spydersoft.Identity/Views/Consent/Index.cshtml
@@ -58,6 +58,18 @@
                     </div>
                 }
 
+                <div class="form-group">
+                    <div class="card">
+                        <div class="card-header">
+                            <span class="glyphicon glyphicon-tasks"></span>
+                            Description
+                        </div>
+                        <div class="card-body">
+                            <input class="form-control" placeholder="Description or name of device" asp-for="Description" autofocus>
+                        </div>
+                    </div>
+                </div>
+
                 @if (Model.AllowRememberConsent)
                 {
                     <div class="form-check">
