modified forgotpassword style

--- a/source/spydersoft.Identity/Views/Account/ForgotPassword.cshtml
+++ b/source/spydersoft.Identity/Views/Account/ForgotPassword.cshtml
@@ -3,25 +3,38 @@
     ViewData["Title"] = "Forgot your password?";
 }
 
-<div class="card">
-    <form asp-action="ForgotPassword" method="post">
-        <div class="card-header">
-            <h3>@ViewData["Title"]</h3>
-        </div>
-        <div class="card-body">
-            <p class="text-muted">Enter your email.</p>
-
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="input-group">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">@@</span>
+<section class="signin-section">
+    <div class="container-fluid">
+        <div class="title-wrapper pt-30">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <div class="title mb-30">
+                        <h2>@ViewData["Title"]</h2>
+                    </div>
                 </div>
-                <input asp-for="Email" class="form-control" placeholder="Email" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <!-- end row -->
+        </div>
+        <div class="row">
+            <div class="form-wrapper">
+                <form asp-action="ForgotPassword" method="post">
+                    <p class="text-muted">Enter your email.</p>
+
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">@@</span>
+                        </div>
+                        <input asp-for="Email" class="form-control" placeholder="Email" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Reset Password</button>
+                </form>
             </div>
         </div>
-        <div class="card-footer"><button type="submit" class="btn btn-success">Submit</button></div>
-    </form>
+    </div>
+</section>
+
 </div>
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
