--- a/source/spydersoft.Identity/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/source/spydersoft.Identity/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -2,7 +2,11 @@
     ViewData["Title"] = "Forgot password confirmation";
 }
 
-<h2>@ViewData["Title"]</h2>
-<p>
-    Please check your email to reset your password.
-</p>
+<section>
+    <div class="container">
+        <h2>@ViewData["Title"]</h2>
+        <p>
+            Please check your email to reset your password.
+        </p>
+    </div>
+</section>
